--- a/style.css
+++ b/style.css
@@ -479,5 +479,14 @@ footer {
             }
         }
     }
+
+    
+    .creator a {
+        color: white; 
+        text-decoration: none;
+        display: flex;
+        justify-content: center;
+        padding-bottom: 20px;
+    }
 }
 /* Footer end */
